
Thanks to Björn "Vampire" Kautler, Nathan Gray, Evan Wright, Alan Ezust, Dale
Anson, Matthieu Casanova, Olivier Pisano, Jimmy Chaw, peibl, Robert Schwenn,
Martin Raspe, Max Funk, SPennington, Ingo Tomahogh, Jarek Czekalski, Jojaba,
Stephen Blackheath, Milan Černil, Makarius, Chris Sullins, Peter C. Chapin,
Thomas Meyer and Tom Power for contributing to this release.

{{{ Bug fixes

- Fixed 'too sensitive electric keys', making them work only when
  a rule affecting the current line is found (unindentThisLine or
  a closing bracket). To trigger this behaviour the user needs to turn
  electric keys mode to 'smart', in Editing options.
  (#1936678 Jarek Czekalski) 

- Added backup of remote files, for example opened with FTP plugin.
  (#1525654 Jarek Czekalski)

- Fixed NPE which was shown in place of a proper error message for empty
  keyword elements in mode XML. (Kazutoshi Satoda)

- Cannot DnD betweeen PingPongLists (#3501020 Jarek Czekalski)

- Fixed macros at menu split are unaccessible (#3512853 Jarek Czekalski)

- If the same plugin is installed in home and install folder, only the newest
  is loaded. (#1848802 Matthieu Casanova)

- Fixed replace all on a directory that was broken (#3480583 Matthieu Casanova)

- Fixed rectangular selection constructor (patch #3440310 peibl)

- When copying a file in VFSBrowser, if a file with the same name already exists
  a suffix copy-n is added to avoid deleting the existing file
  (#3470759 Matthieu Casanova)

- Fixed Ctrl + key not working in completion popup (Matthieu Casanova)

- Fixed copy of Hypersearch results adding \r in the clipboard
  (#3142456 Matthieu Casanova)

- The Java based installer now correctly handles GNU style long filenames in
  the installer package and thus does not corrupt the JavaDoc files anymore
  (#2327520 Björn "Vampire" Kautler)

- Several message boxes were not being created on the EDT which would result in
  tiny, non-resizable message boxes. (#3441535 Dale Anson)

}}}
{{{ API Changes
